--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         </section>
 
         <section class="">
-            <img class="image" src="../images/image.jpg" height="" alt="Dit is mijn foto"><!--dit hoort zo te staan omdat de images anders niet vindbaar is -->
+            <img class="image" src="/images/image.jpg" height="" alt="Dit is mijn foto"><!--dit hoort zo te staan omdat de images anders niet vindbaar is -->
             <h2 class="about-me">Over mij</h2>
             <p> Leeftijd: <%= data.data.custom.age %> jaar</p>
             <p class="bio"> Bio: <%= data.data.bio %></p>
@@ -27,12 +27,12 @@
             <ul>
                 <li>
                     <a href="<%= data.website %>">
-                        <img src="images/25231.png" width="40px">
+                        <img src="/public/images/25231.png" width="40px">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/yu-jing-van-gerwen-a959431b7/">
-                        <img src="/images/linkedin.png" width="40px">
+                        <img src=".../images/linkedin.png" width="40px">
                     </a>
                 </li>
             </ul>
