--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,12 +27,12 @@
             <ul>
                 <li>
                     <a href="<%= data.website %>">
-                        <img src="/public/images/25231.png" width="40px">
+                        <img src="/images/25231.png" width="40px">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/yu-jing-van-gerwen-a959431b7/">
-                        <img src=".../images/linkedin.png" width="40px">
+                        <img src="/images/linkedin.png" width="40px">
                     </a>
                 </li>
             </ul>
