--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visitekaartje</title>
-    <link rel="stylesheet" href="/style-visite.css"><!--geen public ervoor zetten dit hoort zo-->
+    <link rel="stylesheet" href="/style.css"><!--geen public ervoor zetten dit hoort zo-->
     <script type="text/javascript" src= "/interaction.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
