build:opzetten mobile structuur

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
             <h2>Social media</h2>
             <ul>
                 <li>
-                    <a href="<%= data.website %>">
+                    <a href="https://github.com/yujing-student">
                         <img src="/images/25231.png" width="40px">
                     </a>
                 </li>
